Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/layouts/AnonymizationField__mdt-AnonymizationField Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/AnonymizationField__mdt-AnonymizationField Layout.layout-meta.xml
@@ -24,6 +24,18 @@
                 <behavior>Edit</behavior>
                 <field>isCustomField__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>IsPersonAccountField__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Suffix__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>AnonymizationFieldType__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -60,8 +72,6 @@
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
-        <layoutColumns />
-        <layoutColumns />
         <layoutColumns />
         <style>CustomLinks</style>
     </layoutSections>
