--- a/unpackaged/main/default/layouts/RepairOrder__c-Repair Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/RepairOrder__c-Repair Order Layout.layout-meta.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
-    <excludeButtons>OpenSlackRecordChannel</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
         <editHeading>true</editHeading>
-        <label>Repair</label>
+        <label>Repair Order and Client info</label>
         <layoutColumns>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -31,6 +30,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>OutcomeStatus__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Replacement_Product__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -73,7 +76,7 @@
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
         <editHeading>true</editHeading>
-        <label>Product information</label>
+        <label>Repair related item and repair type</label>
         <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -98,10 +101,6 @@
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>EndOfWarranty__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>EndOfWarrantyDate__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -148,7 +147,7 @@
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
         <editHeading>true</editHeading>
-        <label>Location</label>
+        <label>Repair location and replacement item</label>
         <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -230,7 +229,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h7a0000048Hxz</masterLabel>
+        <masterLabel>00hKD000000dRpw</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
