--- a/unpackaged/main/default/layouts/RepairOrder__c-Repair Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/RepairOrder__c-Repair Order Layout.layout-meta.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
+    <excludeButtons>OpenSlackRecordChannel</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -30,10 +31,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>OutcomeStatus__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Replacement_Product__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -229,7 +226,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hKD000000dRpw</masterLabel>
+        <masterLabel>00hKB000001NQov</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
