--- a/unpackaged/main/default/layouts/PersonAccount-Person Account Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/PersonAccount-Person Account Layout.layout-meta.xml
@@ -926,4 +926,21 @@
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
     </summaryLayout>
+    <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
+        <excludeButtons>New</excludeButtons>
+        <fields>NAME</fields>
+        <fields>CREATED_DATE</fields>
+        <fields>ConversationId__c</fields>
+        <relatedList>InsideConversation__c.Account__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
+        <excludeButtons>New</excludeButtons>
+        <fields>NAME</fields>
+        <fields>CREATED_DATE</fields>
+        <fields>Account__c</fields>
+        <fields>ConversationId__c</fields>
+        <relatedList>InsideSocialConversation__c.Contact__c</relatedList>
+    </relatedLists>
 </Layout>
