--- a/unpackaged/main/default/pages/SOM_InvoiceDocumentTemplate.page
+++ b/unpackaged/main/default/pages/SOM_InvoiceDocumentTemplate.page
@@ -35,13 +35,13 @@
     <table class="head" >
         <tr>
             <!-- Company Information-->
-            <td class="Comp_Inf">
+            <td class="Comp_Inf" style="{!invoiceConfigs['STYLE']}">
                 <apex:outputText value="{!invoiceAddress.name}"/><br/>
                 <apex:outputText value="{!invoiceAddress.address}"/><br/>
                 <!--apex:outputText value="{!invoiceConfigs['PDF_ADDRESS_1']}"/>&nbsp;<apex:outputText value="{!invoiceConfigs['PDF_ADDRESS_2']}"/><br/-->
                 <apex:outputText value="{!invoiceAddress.countryLabel}"/>
             </td>
-            <td class="Comp_Inf">
+            <td class="Comp_Inf" style="{!invoiceConfigs['STYLE']}">
                 <apex:outputText value="{!invoiceConfigs['PDF_PHONE']}"/><br/>
                 <apex:outputText value="{!invoiceConfigs['PDF_MAIL']}"/><br/>
                 <apex:outputText value="{!invoiceConfigs['PDF_WEBSITE']}"/><br/>
@@ -61,7 +61,7 @@
             <!-- Billing contact information -->
             <td class="Bill_Contact_Inf">
                 <apex:outputText value="{!invoiceConfigs['BILLING_CONTACT']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}"><apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/BillingContact.PNG')}" width="13%" height="18%" style="margin-top:-2px" alt="RIMOWA"/></apex:outputpanel><br/> 
-                <apex:outputText value="{!invoiceDoc.billingContact.name}"/><br/>
+                <apex:outputText value="{!invoiceDoc.billingContact.name}"/> &nbsp; <apex:outputText value="{!invoiceConfigs['CIVILITY']}"/> <br/> 
                 <apex:outputText value="{!invoiceDoc.billingContact.company}"/><br/>
                 <apex:outputpanel rendered="{!invoiceDoc.Template != 'BR'}">
                     <apex:outputText value="{!invoiceDoc.billingContact.address}"/><br/>
@@ -108,9 +108,10 @@
             <td class="Invoice_Inf">
                 <br/>
                 <span class="fett"><apex:outputText value="{!invoiceConfigs['INVOICE_NUMBER']}"/><apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/InvoiceNumber.PNG')}" width="17%" height="17%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel> :&nbsp; <apex:outputText value="{!invoiceDoc.documentNumber}"/></span><br/>
+                <apex:outputText value="{!invoiceConfigs['ORDER_DATE']}"/> :&nbsp;<apex:outputText value="{!invoiceDoc.orderDate}"/><br/>
                 <apex:outputText value="{!invoiceConfigs['INVOICE_DATE']}"/><apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/InvoiceDate.PNG')}" width="18%" height="18%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel> :&nbsp;<apex:outputText value="{!invoiceDoc.invoiceDate}"/><br/>
                 <apex:outputText value="{!invoiceConfigs['ORDER_NUMBER']}"/><apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/OrderNumber.PNG')}" width="20%" height="20%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel> :&nbsp;<apex:outputText value="{!invoiceDoc.orderNumber}"/><br/>
-                <apex:outputText value="{!invoiceConfigs['TERM_OF_DELIVERY']}"/><apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/TermDelivery.PNG')}" width="22%" height="22%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel> &nbsp;<apex:outputText value="{!invoiceConfigs['TERM_OF_DELIVERY_VALUE']}"/><br/>
+                <apex:outputpanel rendered="{!invoiceDoc.Template != 'JP'}"><apex:outputText value="{!invoiceConfigs['TERM_OF_DELIVERY']}"/><apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/TermDelivery.PNG')}" width="22%" height="22%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel> &nbsp;<apex:outputText value="{!invoiceConfigs['TERM_OF_DELIVERY_VALUE']}"/><br/></apex:outputpanel>
                 <apex:outputText value="{!invoiceConfigs['TAX_ID']}"/><apex:outputpanel rendered="{!IF(OR(invoiceDoc.Template == 'ES',invoiceDoc.Template == 'IT',invoiceDoc.Template == 'BR'),true,false)}">&nbsp;:&nbsp;<apex:outputText value="{!invoiceDoc.TaxID}"/></apex:outputpanel><br/>
                 <!--apex:outputText value="{!invoiceConfigs['TAX_ID']}"/><apex:outputpanel rendered="{!IF(OR(invoiceDoc.Template == 'BR'),true,false)}">&nbsp;:&nbsp;<apex:outputText value="{!invoiceDoc.TaxID}"/></apex:outputpanel><br/-->
                 <!--apex:outputText value="{!invoiceConfigs['CUSTOMER_VAT_ID_IDENTIFIER']}"/> <!-- To verify 'VAT_ID_CUSTOMER' key -->
@@ -119,7 +120,7 @@
             <!-- Delivery contact information -->
             <td class="Invoice_Inf" style="text-align: left;margin-left:-20px; padding-left: 80px" >
                 <apex:outputText value="{!invoiceConfigs['DELIVERY_CONTACT']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/DeliveryContact.PNG')}" width="33%" height="30%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel><br/>
-                <apex:outputText value="{!invoiceDoc.deliveryContact.name}"/><br/>
+                <apex:outputText value="{!invoiceDoc.deliveryContact.name}"/> &nbsp; <apex:outputText value="{!invoiceConfigs['CIVILITY']}"/> <br/>
                 <apex:outputText value="{!invoiceDoc.deliveryContact.company}"/><br/>
                 <apex:outputpanel rendered="{!invoiceDoc.Template != 'BR'}">
                     <apex:outputText value="{!invoiceDoc.deliveryContact.address}"/><br/>
@@ -155,6 +156,16 @@
     <table class="articles">
         <!-- Invoice line items-->
         <thead>
+            <apex:outputpanel rendered="{!invoiceDoc.Template == 'JP'}">
+            <tr>
+                <th width="27px"><apex:outputText value="{!invoiceConfigs['ITEM_DESCRIPTION']}"/></th>
+                <th width="15%" class="align-right" ><apex:outputText value="{!invoiceConfigs['QUANTITY']}"/>  </th>
+                <th width="15px" class="align-right"><apex:outputText value="{!invoiceConfigs['NET_AMOUNT']}"/></th>
+                <th width="25%" class="align-right"><apex:outputText value="{!invoiceConfigs['VAT_AMOUNT']}"/> </th>
+                <th width="15%" class="align-right"><apex:outputText value="{!invoiceConfigs['TOTAL']}"/> </th>
+            </tr>
+            </apex:outputpanel>
+            <apex:outputpanel rendered="{!invoiceDoc.Template != 'JP'}">
             <tr>
                 <th width="50px"><apex:outputText value="{!invoiceConfigs['ITEM_DESCRIPTION']}"/><apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/ItemDesc.PNG')}" width="25%" height="25%" style="margin-top:-2px" alt="RIMOWA"/></apex:outputpanel></th>
                 <th width="20px"><apex:outputText value="{!invoiceConfigs['QUANTITY']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}"><apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/Quantity.PNG')}" width="33%" height="33%" style="display: block;margin-top:-2px" alt="RIMOWA"/></apex:outputpanel> </th>
@@ -162,25 +173,31 @@
                 <th width="27px" class="align-right"><apex:outputpanel rendered="{!invoiceDoc.Template != 'BR'}"><apex:outputText value="{!invoiceConfigs['VAT_AMOUNT']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}"><apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/GrossAmount.PNG')}" width="100%" height="100%" style="display:block; margin-top:-3px" alt="RIMOWA"/></apex:outputpanel></apex:outputpanel></th>
                 <th width="27px" class="align-right"><apex:outputText value="{!invoiceConfigs['TOTAL']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}"><apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/Total.PNG')}" width="80%" height="80%" style="margin-left: 74%;display:block; margin-top:-3px; " alt="RIMOWA"/></apex:outputpanel></th>
             </tr>
-            <tr>
-                <th width="70px" colspan="2"><apex:outputText value="{!invoiceConfigs['ITEM_NO']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/ItemNo.PNG')}" width="16%" height="16%" style="margin-top:-2px" alt="RIMOWA"/></apex:outputpanel></th>
-                <th width="27px" class="align-right">&nbsp;</th>
-                <th width="27px" class="align-right">&nbsp;</th>
-                <th width="27px">&nbsp;</th>
-            </tr>
-            <tr>
-                <th colspan="5"><apex:outputText value="{!invoiceConfigs['SERIAL_NO']}"/>  <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/SerialNumber.PNG')}" width="13%" height="13%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel></th>
-            </tr>
-            <apex:outputpanel rendered="{!invoiceDoc.Template != 'JP'}">
+            </apex:outputpanel>
+            <apex:outputpanel rendered="{!invoiceConfigs['ITEM_NUM_DISPLAY'] == 'true'}">
+                <tr>
+                    <th width="70px" colspan="2"><apex:outputText value="{!invoiceConfigs['ITEM_NO']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/ItemNo.PNG')}" width="10%" height="10%" style="margin-top:-2px" alt="RIMOWA"/></apex:outputpanel></th>
+                    <th width="27px" class="align-right">&nbsp;</th>
+                    <th width="27px" class="align-right">&nbsp;</th>
+                    <th width="27px">&nbsp;</th>
+                </tr>
+            </apex:outputpanel>
+            <apex:outputpanel rendered="{!invoiceConfigs['SERIAL_NUM_DISPLAY'] == 'true'}">
+                <tr>
+                    <th colspan="5"><apex:outputText value="{!invoiceConfigs['SERIAL_NO']}"/>  <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/SerialNumber.PNG')}" width="13%" height="13%" style="margin-top:-3px" alt="RIMOWA"/></apex:outputpanel></th>
+                </tr>
+            </apex:outputpanel>
+            <apex:outputpanel rendered="{!invoiceConfigs['HS_CODE_DISPLAY'] == 'true'}">
                 <tr>
                     <th colspan="5" class="border_bottom"><apex:outputText value="{!invoiceConfigs['HS_CODE']}"/> <apex:outputpanel rendered="{!invoiceDoc.Template == 'AE'}">&nbsp;<apex:image url="{!URLFOR($Resource.InvoiceRessources, 'ArabicRessources/HSCode.PNG')}" width="14%" height="14%" style="margin-top:-2px" alt="RIMOWA"/></apex:outputpanel></th>
                 </tr>
             </apex:outputpanel>
-            <apex:outputpanel rendered="{!invoiceDoc.Template == 'JP'}">
+            
+			<apex:outputPanel rendered="{!OR(invoiceConfigs['HS_CODE_DISPLAY'] == 'false', invoiceConfigs['SERIAL_NUM_DISPLAY'] == 'false', invoiceConfigs['ITEM_NUM_DISPLAY'] == 'false')}">
                 <tr>
                     <th colspan="5" class="border_bottom"></th>
                 </tr>
-            </apex:outputpanel>
+            </apex:outputPanel>
             
         </thead>
         <tbody class="InvoiceLineItem">
@@ -194,12 +211,17 @@
                     <td width="27%" class="align-right"><apex:outputpanel rendered="{!invoiceDoc.Template != 'BR'}"><apex:outputText value="{!lineItem.vat}"/>&nbsp;<apex:outputText value="{!invoiceDoc.currencyCode}"/></apex:outputpanel></td>
                     <td width="20px" class="align-right"><apex:outputText value="{!lineItem.total}"/>&nbsp;<apex:outputText value="{!invoiceDoc.currencyCode}"/></td>
                 </tr>
-                <tr>
-                    <td colspan="5"><apex:outputText value="{!lineItem.itemNumber}"/></td>
-                </tr>
-                <tr>
-                    <td colspan="5"><apex:outputText value="{!lineItem.serialNumber}"/>&nbsp;</td>
-                </tr>
+                <apex:outputpanel rendered="{!invoiceConfigs['ITEM_NUM_DISPLAY'] == 'true'}">
+                    <tr>
+                        <td colspan="5"><apex:outputText value="{!lineItem.itemNumber}"/></td>
+                    </tr>
+                </apex:outputpanel>
+                <apex:outputpanel rendered="{!invoiceConfigs['SERIAL_NUM_DISPLAY'] == 'true'}">
+                    <tr>
+                        <td colspan="5"><apex:outputText value="{!lineItem.serialNumber}"/>&nbsp;</td>
+                    </tr>
+                </apex:outputpanel>
+                <apex:outputpanel rendered="{!invoiceConfigs['HS_CODE_DISPLAY'] == 'true'}">
                 <tr>
                     <td colspan="5">
                         <apex:outputpanel rendered="{!invoiceDoc.Template != 'JP'}">
@@ -210,6 +232,7 @@
                             </apex:outputpanel>
                     </td>
                 </tr>
+                </apex:outputpanel>
                 
             </apex:repeat>
             <!-- end loop-->
